# FULL-STACK-TODO

./: .env  .gitignore  .gitignore_temp  CLAUDE.md  README.md  backend_server.py  backend_server_with_init.py  check_env.py  check_paths.py  create_sample_user.py  curl_commands.txt  debug_backend.py  debug_imports.py  debug_models.py  final_checklist.md  load_env.py  minimal_backend.py  parse_env.py  reproduce_error.py  run_backend.py  run_debug_server.py  run_server_with_log.py  simple_test.py  start_backend.py  start_backend_correct.py  test_api.py  test_api_with_auth.py  test_backend_components.py  test_components.py  test_components_file.py  test_database.py  test_db_connection.py  test_db_connection_simple.py  test_db_env.py  test_db_final.py  test_db_fixed.py  test_db_manual.py  test_db_sqlmodel.py  test_endpoint_logic.py  test_imports.py  (+4 more)
.spec-kit/: config.yaml
.specify/memory/: constitution.md
.specify/templates/: phr-template.prompt.md  plan-template.md  spec-template.md  tasks-template.md
backend/: .env  CLAUDE.md  check_users.py  create_test_user.py  create_user_simple.py  debug_server.py  generate_code.py  init_db.py  pyproject.toml  requirements.txt  run_server.py  test_login.py  test_models.py  test_user.py
backend/api/: index.py
backend/src/: auth.py  auth_middleware.py  database.py  main.py  main_with_env.py
backend/src/api/: auth.py  todos.py
backend/src/core/: config.py  exceptions.py  logging_config.py
backend/src/models/: base.py  session.py  todo.py  user.py
backend/src/services/: todo_service.py  user_service.py
docs/: api.md
frontend/: .env  CLAUDE.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthClientProvider.tsx  CustomAuthProvider.tsx  Header.tsx  ToastProvider.tsx
frontend/src/lib/: api.ts  types.ts  (+1 more)
(+19 files in other folders)
